ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-application-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
	nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
    paths:
	  - path: /api/backend-application(/|$)(.*)
	    backend:
		  serviceName: backend-application-service
		  servicePort: 8080
